// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Messaging/Webex Activity Created Long Back 1`] = `
Array [
  <div
    className="wxc-activity"
  >
    <div
      className="wxc-activity-header"
    >
      <div
        className="wxc-avatar wxc-activity-header__avatar"
      >
        <div
          className="wxc-avatar__content"
        >
          <svg
            className="wxc-avatar__placeholder wxc-avatar__placeholder-6"
            viewBox="0 0 40 40"
          >
            <text
              x="50%"
              y="50%"
            >
              BG
            </text>
          </svg>
          <img
            alt="avatar"
            className=""
            onError={[Function]}
            src="./images/barbara.png"
          />
          <div
            className="wxc-avatar__status-icon-container"
          >
            <svg
              className="wxc-icon wxc-avatar__status-icon wxc-avatar__status-dnd"
              fill="none"
              height={24}
              style={Object {}}
              viewBox="0 0 32 32"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M16 29.5C23.4558 29.5 29.5 23.4558 29.5 16C29.5 8.54416 23.4558 2.5 16 2.5C8.54416 2.5 2.5 8.54416 2.5 16C2.5 23.4558 8.54416 29.5 16 29.5ZM10 15C9.44772 15 9 15.4477 9 16C9 16.5523 9.44772 17 10 17H22C22.5523 17 23 16.5523 23 16C23 15.4477 22.5523 15 22 15H10Z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        className="wxc-activity-header__author"
      >
        <span>
          Barbara German
        </span>
        <span
          className="wxc-activity-header__timestamp"
        >
          07/25/2020, 10:00 AM
        </span>
      </div>
    </div>
    <div
      className="wxc-activity__content"
    >
      The login page seems to be confusing a lot of people! Let's brainstorm some new designs
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/Webex Activity Created This Week 1`] = `
Array [
  <div
    className="wxc-activity"
  >
    <div
      className="wxc-activity-header"
    >
      <div
        className="wxc-avatar wxc-activity-header__avatar"
      >
        <div
          className="wxc-avatar__content"
        >
          <svg
            className="wxc-avatar__placeholder wxc-avatar__placeholder-6"
            viewBox="0 0 40 40"
          >
            <text
              x="50%"
              y="50%"
            >
              BG
            </text>
          </svg>
          <img
            alt="avatar"
            className=""
            onError={[Function]}
            src="./images/barbara.png"
          />
          <div
            className="wxc-avatar__status-icon-container"
          >
            <svg
              className="wxc-icon wxc-avatar__status-icon wxc-avatar__status-dnd"
              fill="none"
              height={24}
              style={Object {}}
              viewBox="0 0 32 32"
              width={24}
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clipRule="evenodd"
                d="M16 29.5C23.4558 29.5 29.5 23.4558 29.5 16C29.5 8.54416 23.4558 2.5 16 2.5C8.54416 2.5 2.5 8.54416 2.5 16C2.5 23.4558 8.54416 29.5 16 29.5ZM10 15C9.44772 15 9 15.4477 9 16C9 16.5523 9.44772 17 10 17H22C22.5523 17 23 16.5523 23 16C23 15.4477 22.5523 15 22 15H10Z"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        className="wxc-activity-header__author"
      >
        <span>
          Barbara German
        </span>
        <span
          className="wxc-activity-header__timestamp"
        >
          Thursday, 10:00 AM
        </span>
      </div>
    </div>
    <div
      className="wxc-activity__content"
    >
      Following up on our last task. Seems like we need more time?
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/Webex Activity Created Today 1`] = `
Array [
  <div
    className="wxc-activity"
  >
    <div
      className="wxc-activity-header"
    >
      <div
        className="wxc-avatar wxc-activity-header__avatar"
      >
        <div
          className="wxc-avatar__content"
        >
          <svg
            className="wxc-avatar__placeholder wxc-avatar__placeholder-6"
            viewBox="0 0 40 40"
          >
            <text
              x="50%"
              y="50%"
            >
              SD
            </text>
          </svg>
          <img
            alt="avatar"
            className=""
            onError={[Function]}
            src="./images/simon.png"
          />
        </div>
      </div>
      <div
        className="wxc-activity-header__author"
      >
        <span>
          Simon Damiano
        </span>
        <span
          className="wxc-activity-header__timestamp"
        >
          10:00 AM
        </span>
      </div>
    </div>
    <div
      className="wxc-activity__content"
    >
      Hey guys! I'm going to skip standup today, not feeling great 🤢
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/Webex Activity Created Yesterday 1`] = `
Array [
  <div
    className="wxc-activity"
  >
    <div
      className="wxc-activity-header"
    >
      <div
        className="wxc-avatar wxc-activity-header__avatar"
      >
        <div
          className="wxc-avatar__content"
        >
          <svg
            className="wxc-avatar__placeholder wxc-avatar__placeholder-6"
            viewBox="0 0 40 40"
          >
            <text
              x="50%"
              y="50%"
            >
              BS
            </text>
          </svg>
          <img
            alt="avatar"
            className=""
            onError={[Function]}
            src="./images/brandon.png"
          />
        </div>
      </div>
      <div
        className="wxc-activity-header__author"
      >
        <span>
          Brandon Seeger
        </span>
        <span
          className="wxc-activity-header__timestamp"
        >
          Yesterday, 10:00 AM
        </span>
      </div>
    </div>
    <div
      className="wxc-activity__content"
    >
      Got some of the new designs for the login page, will send the Figma links tomorrow
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/Webex Activity Multi Line 1`] = `
Array [
  <div
    className="wxc-activity"
  >
    <div
      className="wxc-activity-header"
    >
      <div
        className="wxc-avatar wxc-activity-header__avatar"
      >
        <div
          className="wxc-avatar__content"
        >
          <svg
            className="wxc-avatar__placeholder wxc-avatar__placeholder-6"
            viewBox="0 0 40 40"
          >
            <text
              x="50%"
              y="50%"
            >
              GE
            </text>
          </svg>
          <img
            alt="avatar"
            className=""
            onError={[Function]}
            src="./images/giacomo.png"
          />
        </div>
      </div>
      <div
        className="wxc-activity-header__author"
      >
        <span>
          Giacomo Edwards
        </span>
        <span
          className="wxc-activity-header__timestamp"
        >
          10:05 AM
        </span>
      </div>
    </div>
    <div
      className="wxc-activity__content"
    >
      I ran into the same issue before! Have you checked your OS permissions?
Sometimes that is disabled for the browser and causes the app to not load properly.
Let me know if you need more help! Maybe we can talk about it during standup
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;

exports[`Storyshots Messaging/Webex Activity No Header 1`] = `
Array [
  <div
    className="wxc-activity"
  >
    <div
      className="wxc-activity__content"
    >
      Can someone help me troubleshoot?
    </div>
  </div>,
  <video
    autoPlay={true}
    height="0"
    id="remote-video"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-meeting.mp4"
    width="0"
  />,
  <video
    autoPlay={true}
    height="0"
    id="remote-share"
    loop={true}
    muted={true}
    playsInline={true}
    src="./video/ongoing-share.mp4"
    width="0"
  />,
]
`;
